fixed dataset and tokenization

--- a/notebooks/dataset_flickr8k.ipynb
+++ b/notebooks/dataset_flickr8k.ipynb
@@ -365,15 +365,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Load vocab from cache...\n",
-      "Load vocab from cache...\n"
+      "Creating new vocab index...\n",
+      "[1000/37955] Tokenized the captions.\n",
+      "[2000/37955] Tokenized the captions.\n",
+      "[3000/37955] Tokenized the captions.\n",
+      "[4000/37955] Tokenized the captions.\n",
+      "[5000/37955] Tokenized the captions.\n",
+      "[6000/37955] Tokenized the captions.\n",
+      "[7000/37955] Tokenized the captions.\n",
+      "[8000/37955] Tokenized the captions.\n",
+      "[9000/37955] Tokenized the captions.\n",
+      "[10000/37955] Tokenized the captions.\n",
+      "[11000/37955] Tokenized the captions.\n",
+      "[12000/37955] Tokenized the captions.\n",
+      "[13000/37955] Tokenized the captions.\n",
+      "[14000/37955] Tokenized the captions.\n",
+      "[15000/37955] Tokenized the captions.\n",
+      "[16000/37955] Tokenized the captions.\n",
+      "[17000/37955] Tokenized the captions.\n",
+      "[18000/37955] Tokenized the captions.\n",
+      "[19000/37955] Tokenized the captions.\n",
+      "[20000/37955] Tokenized the captions.\n",
+      "[21000/37955] Tokenized the captions.\n",
+      "[22000/37955] Tokenized the captions.\n",
+      "[23000/37955] Tokenized the captions.\n",
+      "[24000/37955] Tokenized the captions.\n",
+      "[25000/37955] Tokenized the captions.\n",
+      "[26000/37955] Tokenized the captions.\n",
+      "[27000/37955] Tokenized the captions.\n",
+      "[28000/37955] Tokenized the captions.\n",
+      "[29000/37955] Tokenized the captions.\n",
+      "[30000/37955] Tokenized the captions.\n",
+      "[31000/37955] Tokenized the captions.\n",
+      "[32000/37955] Tokenized the captions.\n",
+      "[33000/37955] Tokenized the captions.\n",
+      "[34000/37955] Tokenized the captions.\n",
+      "[35000/37955] Tokenized the captions.\n",
+      "[36000/37955] Tokenized the captions.\n",
+      "[37000/37955] Tokenized the captions.\n"
      ]
     }
    ],
@@ -384,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,17 +439,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([  1,   4,  23, 142, 100,   4, 156,   3, 155, 284,   4, 783,  95,  39,\n",
-       "         79, 127,  30,   9,  35,   6,   4, 428,  17,   2])"
+       "tensor([   1,   48,   23,  412,    6,  672, 1078,  246,   40,   25,  129,   13,\n",
+       "           4,  229,  130,  234,  388,  265,  202,    4,  409,   17,    2])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,22 +460,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24"
+       "23"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "lengths[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 224, 224])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset Flickr8kDataset\n",
+       "    Number of datapoints: 37955\n",
+       "    Root location: ../data/flickr8k/Images\n",
+       "    StandardTransform\n",
+       "Transform: Compose(\n",
+       "               Resize(size=226, interpolation=bilinear, max_size=None, antialias=None)\n",
+       "               CenterCrop(size=(224, 224))\n",
+       "               ToTensor()\n",
+       "               Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
+       "           )\n",
+       "Target transform: Compose(\n",
+       "                      <function tokenize_nltk at 0x1305be430>\n",
+       "                      <function add_start_end at 0x1546a7280>\n",
+       "                      <datasets.vocab.Vocabulary object at 0x1498479a0>\n",
+       "                      <function caption_to_tensor at 0x14a81cca0>\n",
+       "                  )"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_provider.dataset['train']"
    ]
   }
  ],
