coco fix abrtract dataset

--- a/notebooks/dataset_flickr8k.ipynb
+++ b/notebooks/dataset_flickr8k.ipynb
@@ -760,6 +760,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "280882555"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "import json\n",
+    "from distutils.util import strtobool\n",
+    "\n",
+    "bool(strtobool('true'))\n",
+    "\n",
+    "# for i in ['hello', '3', '3.64', '-1', 'True', 'true']:\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
